--- a/box/web/etc/nginx.conf
+++ b/box/web/etc/nginx.conf
@@ -3,7 +3,7 @@ server {
   listen 80 default;
 
   location ^~ /uploads/ {
-    root /home/box/web;
+    root /home/box/web/;
   }
 
   location ~* ^.+\.\w+$ {
