--- a/box/web/etc/nginx.conf
+++ b/box/web/etc/nginx.conf
@@ -1,17 +1,23 @@
 server {
 
-  listen 80 default;
+	listen 80 default;
 
-  location ^~ /uploads/ {
-    root /home/box/web/;
-  }
+	location ^~ /uploads/ {
 
-  location ~* ^.+\.\w+$ {
-    root /home/box/web/public;
-  }
+	root /home/box/web;
 
-  location / {
-    return 404;
-  }
-  
+}
+
+location ~* ^.+\.\w+$ {
+
+	root /home/box/web/public;
+
+}
+
+location / {
+
+	return 404;
+
+}
+
 }
