added new files

--- a/home/box/web/etc/nginx.conf
+++ b/home/box/web/etc/nginx.conf
@@ -1,23 +1,22 @@
-server {
-
+server
+{
 	listen 80 default;
 
-	location ^~ /uploads/ {
+	error_log /home/box/web/error.log;
+ 	access_log /home/box/web/access.log;
 
-	root /home/box/web;
+	location ^~ /uploads/ 
+	{
+		root /home/box/web/uploads;
+	}
 
-}
+	location ~* ^.+\.\w{1, 5}$
+	{
+		root /home/box/web/public;
+	}
 
-location ~* ^.+\.\w+$ {
-
-	root /home/box/web/public;
-
-}
-
-location / {
-
-	return 404;
-
-}
-
+	location ~* ^.+/\w+$
+	{
+		return 404;
+	}
 }
