--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,17 +1,22 @@
-server {
+server
+{
+	listen 80 default;
 
-  listen 80 default;
+	error_log /web/error.log;
+ 	access_log /web/access.log;
 
-  location ^~ /uploads/ {
-    root /home/box/web;
-  }
+	location ^~ /uploads/ 
+	{
+		root /web/uploads;
+	}
 
-  location ~* ^.+\.\w+$ {
-    root /home/box/web/public;
-  }
+	location ~* ^.+\.\w{1, 5}$
+	{
+		root /web/public;
+	}
 
-  location / {
-    return 404;
-  }
-  
+	location ~* ^.+/\w+$
+	{
+		return 404;
+	}
 }
